--- a/package.json
+++ b/package.json
@@ -1,36 +1,53 @@
 {
   "name": "react-sample",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "body-parser": "~1.0.0",
     "bootstrap": "^3.3.1",
+    "config": "^1.8.1",
+    "connect-redis": "^2.1.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
     "director": "^1.2.3",
+    "express": "~4.2.0",
+    "express-session": "^1.9.3",
+    "fibrous": "^0.3.3",
+    "jade": "~1.3.0",
+    "jquery": "^2.1.1",
+    "lodash": "^2.4.1",
+    "moment": "^2.8.4",
+    "mongoose": "^3.8.20",
+    "morgan": "~1.0.0",
     "react": "^0.12.1",
-    "reflux": "^0.2.0"
+    "react-router": "^0.11.4",
+    "reflux": "^0.2.0",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
-    "browser-sync": "^1.7.2",
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
+    "css-loader": "^0.9.0",
     "del": "^1.0.0",
     "file-loader": "^0.8.1",
     "gulp": "^3.8.10",
     "gulp-changed": "^1.0.0",
+    "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.7.1",
+    "gulp-nodemon": "^1.0.4",
     "gulp-plumber": "^0.6.6",
     "gulp-util": "^3.0.1",
+    "gulp-webpack": "^1.1.0",
     "jsx-loader": "^0.12.2",
     "merge-stream": "^0.1.6",
     "protractor": "^1.4.0",
     "react-tools": "^0.12.1",
     "run-sequence": "^1.0.2",
+    "style-loader": "^0.8.2",
     "url-loader": "^0.5.5",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.4.13"
   }
 }
