--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "connect-redis": "^2.1.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "director": "^1.2.3",
     "express": "~4.2.0",
     "express-session": "^1.9.3",
     "fibrous": "^0.3.3",
     "jade": "~1.3.0",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
+    "marked": "^0.3.2",
     "moment": "^2.8.4",
     "mongoose": "^3.8.20",
     "morgan": "~1.0.0",
+    "page": "^1.5.0",
+    "qs": "^2.3.3",
     "react": "^0.12.1",
     "react-router": "^0.11.4",
     "reflux": "^0.2.0",
