--- a/blog/package.json
+++ b/blog/package.json
@@ -14,9 +14,11 @@
     "connect-redis": "^2.1.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "express": "~4.2.0",
+    "express": "^4.10.5",
     "express-session": "^1.9.3",
     "fibrous": "^0.3.3",
+    "gulp-sass": "^1.2.4",
+    "highlight.js": "^8.4.0",
     "jade": "~1.3.0",
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
@@ -24,6 +26,7 @@
     "mongoose": "^3.8.20",
     "morgan": "~1.0.0",
     "node-jsx": "^0.12.4",
+    "normalize.scss": "^0.1.0",
     "page": "^1.5.0",
     "qs": "^2.3.3",
     "react": "^0.12.1",
