--- a/blog/package.json
+++ b/blog/package.json
@@ -3,7 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
+  },
+  "jest": {
+    "rootDir": "./",
+    "scriptPreprocessor": "./preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
   },
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
@@ -30,6 +38,7 @@
     "page": "^1.5.0",
     "qs": "^2.3.3",
     "react": "^0.12.1",
+    "react-hot-loader": "^1.0.0-alpha.3",
     "request-promise": "^0.3.2",
     "static-favicon": "~1.0.0"
   },
@@ -47,6 +56,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-util": "^3.0.1",
     "gulp-webpack": "^1.1.0",
+    "jest-cli": "^0.2.1",
     "jsx-loader": "^0.12.2",
     "merge-stream": "^0.1.6",
     "protractor": "^1.4.0",
@@ -54,6 +64,7 @@
     "run-sequence": "^1.0.2",
     "style-loader": "^0.8.2",
     "url-loader": "^0.5.5",
-    "webpack": "^1.4.13"
+    "webpack": "^1.4.13",
+    "webpack-dev-server": "^1.6.6"
   }
 }
