--- a/blog/package.json
+++ b/blog/package.json
@@ -19,13 +19,10 @@
     "body-parser": "~1.0.0",
     "bootstrap": "^3.3.1",
     "config": "^1.8.1",
-    "connect-redis": "^2.1.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "^4.10.5",
-    "express-session": "^1.9.3",
     "fibrous": "^0.3.3",
-    "gulp-sass": "^1.2.4",
     "highlight.js": "^8.4.0",
     "jade": "~1.3.0",
     "lodash": "^2.4.1",
@@ -38,11 +35,12 @@
     "page": "^1.5.0",
     "qs": "^2.3.3",
     "react": "^0.12.1",
-    "react-hot-loader": "^1.0.0-alpha.3",
     "request-promise": "^0.3.2",
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
+    "gulp-sass": "^1.2.4",
+    "browser-sync": "^1.7.3",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.0",
@@ -65,6 +63,6 @@
     "style-loader": "^0.8.2",
     "url-loader": "^0.5.5",
     "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack-dev-middleware": "^1.0.11"
   }
 }
